--- a/ilu.html
+++ b/ilu.html
@@ -70,7 +70,7 @@
   </head>
   <body>
     <video class="video-bg" autoplay loop muted playsinline>
-      <source src="final.mov" type="video/mp4" />
+      <source src="final.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
     <div class="message">I Love You So Much Kee.Thank You ❤️</div>
